--- a/index.html
+++ b/index.html
@@ -1,52 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vishwas Ramidi - Mechanical Engineer Portfolio</title>
-  <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
-</head>
-<body>
-  <!-- Header Section -->
-  <header>
-    <h1>Vishwas Ramidi</h1>
-    <p>Mechanical Engineer | Product Development & Automation Specialist</p>
-    <button><a href="#contact">Contact Me</a></button>
-  </header>
+<section id="projects">
+  <h2>My Projects</h2>
+  <ul>
+    <!-- Existing Projects -->
+    <li>
+      <h3>DeNOx Dosing Module Design</h3>
+      <p>Designed 2D/3D assemblies ensuring 100% Bharat Stage 6 compliance.</p>
+    </li>
+    <li>
+      <h3>Power Grid Optimization Algorithm</h3>
+      <p>Improved model accuracy by 10% using MATLAB algorithms for grid optimization.</p>
+    </li>
 
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I am a mechanical engineer with expertise in product design, automation, and optimization. With dual master's degrees from Clemson University and Czech Technical University, I bring over five years of hands-on experience in creating innovative solutions.</p>
-  </section>
+    <!-- New Projects -->
+    <li>
+      <h3>Optimal Operation of Electric Vehicle (EV) Ride-Sharing Services</h3>
+      <p><strong>Overview:</strong> Developed a multi-objective optimization algorithm to balance profit, minimize CO2 emissions, and optimize battery health for EV ride-sharing services. The model aimed to optimize the fleet’s operations, considering charging costs, vehicle availability, passenger demand, and environmental impact.</p>
+      <p><strong>Technologies Used:</strong> MATLAB, Model Predictive Control (MPC), Multi-objective Optimization, EV Fleet Management.</p>
+      <p><strong>Key Achievements:</strong> Improved fleet efficiency by **15%** and reduced battery degradation rates by **15%** through optimized charging schedules, increasing profitability while minimizing environmental impact.</p>
+    </li>
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>My Projects</h2>
-    <ul>
-      <li>
-        <h3>DeNOx Dosing Module Design</h3>
-        <p>Designed 2D/3D assemblies ensuring 100% Bharat Stage 6 compliance.</p>
-      </li>
-      <li>
-        <h3>Power Grid Optimization Algorithm</h3>
-        <p>Improved model accuracy by 10% using MATLAB algorithms for grid optimization.</p>
-      </li>
-    </ul>
-  </section>
+    <li>
+      <h3>Design of Rear Axle Shaft for Mercedes Sprinter Van</h3>
+      <p><strong>Overview:</strong> The project involved the design and manufacturing process of a rear axle shaft for the Mercedes-Benz Sprinter Van, focusing on strength, durability, and safety.</p>
+      <p><strong>Technologies Used:</strong> SolidWorks, Finite Element Analysis (FEA), Torsional Stress Calculation, Material Selection (AISI 4340 Steel Alloy).</p>
+      <p><strong>Key Achievements:</strong> Optimized shaft dimensions for strength and weight reduction, performing stress analysis to ensure the axle could withstand high torque conditions.</p>
+    </li>
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: vishwasramidi2297@gmail.com</p>
-    <p>Phone: +1 (864) 765-7930</p>
-    <p><a href="https://www.linkedin.com/in/vishwas-reddy-ramidi-442328113">LinkedIn</a></p>
-  </section>
+    <li>
+      <h3>Optimizing NOx Reduction and Ammonia Slip in CI Engines: An MPC-Based Approach</h3>
+      <p><strong>Overview:</strong> This project involved optimizing the Selective Catalytic Reduction (SCR) system in Compression Ignition (CI) engines using Model Predictive Control (MPC) to reduce NOx emissions and minimize ammonia slip.</p>
+      <p><strong>Technologies Used:</strong> MATLAB, Model Predictive Control (MPC), SCR Optimization, Emission Control.</p>
+      <p><strong>Key Achievements:</strong> Reduced NOx emissions by **20%** and minimized ammonia slip while maintaining fuel efficiency by **10%** without increasing maintenance costs.</p>
+    </li>
 
-  <footer>
-    <p>&copy; 2025 Vishwas Ramidi. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script> <!-- Link to your JavaScript file -->
-</body>
-</html>
+    <li>
+      <h3>Pump Service & Rebuild Excellence</h3>
+      <p><strong>Overview:</strong> Optimized pump maintenance processes at Aalberts - Roy Metal Finishing Company by implementing 5S methodology and establishing standardized repair procedures.</p>
+      <p><strong>Technologies Used:</strong> 5S Methodology, FMEA (Failure Modes and Effects Analysis), Preventive Maintenance Procedures, Pump Testing Equipment.</p>
+      <p><strong>Key Achievements:</strong> Reduced pump downtime by **50%**, improved spare pump availability to **100%**, and saved over **$250K annually** in repair costs. Developed a state-of-the-art testing facility for pumps and standardized repair processes.</p>
+    </li>
+  </ul>
+</section>
